firmware/defmt-test/macros/tests/ui/tests-without-annotated-function.rs
#[defmt_test_macros::tests]
mod tests {
    fn some_function() {
    }
}